# mandarin

./: CMakeLists.txt
include/mandarin/: base.h  config.h  mandarin.h
src/: mandarin.cpp
src/exe/: main.cpp
